# attribute-fun

./: README.md  attribute_inference.ipynb  debug_visualisation.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: attribute_inference-checkpoint.ipynb  attribute_inference_visualization-checkpoint.py  k_attribute_inference-checkpoint.ipynb  k_attribute_inference-pytorch-checkpoint.ipynb  visualisation-checkpoint.ipynb
src/attacks/: baseline.py  black_box.py  debug.py  models.py  white_box.py
src/data/: loader.py
src/models/: classifier.py
src/utils/: evaluation.py  target_fix.py  visualization.py
